# p5-hh4hl.sandbox.ci.travis

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  uid+gid.cmake
modules/: CMakeLists.txt  Makefile
modules/funchook/: .gitignore  CMakeLists.txt  Makefile  debian-add_target.cmake
modules/funchook/docker/: debian.sh
modules/funchook/docker-bin/: debian.sh
tools/: make-prefix.tar.xz.sh
